--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 .container-form{
     max-width: 1100px;
     padding: 10px;
+    margin: 0 auto;
 }
 
 .container {
@@ -16,6 +17,8 @@
     flex-wrap: wrap;
     max-width: 1100px;
     padding: 10px;
+    justify-content: space-between;
+    margin: 0 auto;    
 }
 
 .personaje {
@@ -23,6 +26,7 @@
     margin: 20px 5px;   
     background-color: #eeeeee;
     border-radius: 10px;
+    min-width: 250px;
 }
 
 a.btn {
