--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ a.btn {
     margin: 0 auto;
     transition: .5s;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     left: 25%;
 }
 
@@ -183,10 +183,17 @@ a.btn_volver:hover{
     color: #2196F3;
 }
 
-@media (max-width: 700px){
+@media (max-width: 800px){
+    .container {    
+    justify-content: space-around;
+}
+}
+
+@media (max-width: 600px){
 
 .detalle_personaje {
     display: block;
+    min-height: 600px;
     
 }
 .detalle_personaje img {
@@ -198,17 +205,40 @@ a.btn_volver:hover{
 
 .personaje {
     margin: 10px auto;
-    width: 95%;
-    min-height: 540px;;
+    width: 90%;
+    min-height: 840px;
 }
 
 div.forms {
     display: block;
+    width: 90%;
+    margin: 0 auto;
 }
 
 select#status, input#buscar {
     width: 100%;    
     margin: 10px auto;
+}
+
+
+}
+
+@media (max-width: 500px){
+
+.personaje {
+   min-height: 610px;
+   max-height: 630px;
+       
+}
+
+}
+
+@media (max-width: 400px){
+
+.personaje {
+   min-height: 550px;
+   max-height: 600px;
+       
 }
 
 }
